--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,8 +1,15 @@
 @import "../node_modules/picnic/picnic.min.css";
 
 .App {
-  max-width: 600px;
+  width: 90%;
   margin: 0 auto;
+
+  section {
+    background: #fff;
+    text-align: left;
+    max-width: 960px;
+    padding: 80px 0 0;
+  }
 }
 
 .gorilla-list {
